force-app/main/default/objects/SIR_CatalogoSirec__c/SIR_CatalogoSirec__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene diferentes Catalogos de Sirec</description>
    <label>Catalogo Sirec</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre Catalogo Sirec</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogos Sirec</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>