force-app/main/default/objects/SIR_CatalogoSirec__c/fields/SIR_Codigo__c.field-meta.xml
<CustomField>
    <fullName>SIR_Codigo__c</fullName>
    <description>Código del Catalogo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código</label>
    <length>50</length>
    <type>Text</type>
</CustomField>