force-app/main/default/objects/SIR_CatalogoSirec__c/fields/SIR_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>SIR_Descripcion__c</fullName>
    <description>Campo donde se guardan las Descripciones de los Códigos de los catálogos de Sirec</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>