force-app/main/default/objects/SIR_CatalogoSirec__c/fields/SIR_MasterRecordId__c.field-meta.xml
<CustomField>
    <fullName>SIR_MasterRecordId__c</fullName>
    <description>Clave única que se crea con la concatenación del campo COD_TABLA y COD_CATALOGO del fichero de SIREC</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Master Record Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>